<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silent"
            android:textAppearance="@style/silent_and_moon_welcome" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:src="@drawable/welcome_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/moon"
            android:textAppearance="@style/silent_and_moon_welcome" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            style="@style/font_30_center_001_ffeccc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hi Afsar, Welcome"
            android:textStyle="bold" />

        <TextView
            style="@style/font_30_center_001_ffeccc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_silent_moon" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/helvetica_neue_light"
        android:text="@string/explore_the"
        android:textAlignment="center"
        android:textColor="#EBEAEC"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/buttonGetStarted_Welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/custom_button_welcome"
        android:text="@string/get_started"
        android:textAppearance="@style/fontMedium_14_005_f6f1fb"
        android:textColor="#3F414E"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>