<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RemindersActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/what_time"
        android:textAppearance="@style/font_bold_3f414e"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/helvetica_neue_light"
        android:text="@string/any_time"
        android:textAppearance="@style/fontLight_16_a1a4b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTimePicker_Reminders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/picker_background"
        app:cardCornerRadius="24dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp"
        app:contentPaddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.haui.phamdai.silentmoon.widgets.timepicker.SingleDateAndTimePicker
            android:id="@+id/singleTimePicker_Reminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/picker_background"
            app:fontFamily="@font/helvetica_neue_medium"
            app:picker_curved="true"
            app:picker_curvedMaxAngle="90"
            app:picker_cyclic="true"
            app:picker_displayDays="false"
            app:picker_displayDaysOfMonth="false"
            app:picker_displayHours="true"
            app:picker_displayMinutes="true"
            app:picker_displayMonth="false"
            app:picker_displayYears="false"
            app:picker_itemSpacing="3dp"
            app:picker_mustBeOnFuture="false"
            app:picker_selectorColor="@android:color/transparent"
            app:picker_textAlign="center"
            app:picker_textSize="24sp"
            app:picker_visibleItemCount="7" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/which_day"
        android:textAppearance="@style/font_bold_3f414e"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTimePicker_Reminders" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/everyday_is_best"
        android:textAppearance="@style/fontLight_16_a1a4b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.haui.phamdai.silentmoon.widgets.daypicker.SingleDayPicker
        android:id="@+id/singleDayPicker_Reminders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/buttonSave_Reminders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button_sign_up"
        android:text="@string/save"
        android:textAppearance="@style/fontMedium_14_005_f6f1fb"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/textViewNo_Reminders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewNo_Reminders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/no_thanks"
        android:textAppearance="@style/fontMedium_14_005_f6f1fb"
        android:textColor="#3F414E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>